add sass extend in home page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     elit, gravida vel volutpat id, venenatis ultricies magna. Nulla purus ipsum, lobortis et tristique
                     at, euismod id nisi.</p>
             </div>
-            <div class="content last cell3">
+            <div class="last cell3">
                 <img src="assets/Home desktop 2.png" alt="Boy in space">
             </div>
         </div>
