--- a/pages/info.html
+++ b/pages/info.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Leonardo Pita Web, web de desarrollador web, INFO PAGE.">
         <meta name="keywords"  content="HTML, JS, CSS, , sass, git, github, INFORMACION">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="/assets/iconfav.svg">
+        <link rel="icon" type="image/x-icon" href="../assets/iconfav.svg">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="../styles/styles.css">
