--- a/pages/info.html
+++ b/pages/info.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Leonardo Pita WebDev/INFO</title>
+        <title>LeoPita INFO</title>
         <meta name="description" content="Leonardo Pita Web, web de desarrollador web, INFO PAGE.">
         <meta name="keywords"  content="HTML, JS, CSS, , sass, git, github, INFORMACION">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -79,9 +79,9 @@
             </div>
             <div class="flex content">
                 <h2 class="animateIcon"><a class="navbar-brand fontColor1 title current animateIcon" href="../index.html">LP</a></h2>
-                <a href="#"><img class="animateIcon" src="../assets/githublogo.png"></a>
-                <a href="#"><img class="animateIcon" src="../assets/linkedinlogo.png"></a>
-                <a href="#"><img class="animateIcon" src="../assets/instagramlogo.png"></a>
+                <a href="#"><img class="animateIcon" src="../assets/githublogo.png" alt="Logo github"></a>
+                <a href="#"><img class="animateIcon" src="../assets/linkedinlogo.png" alt="Logo linkedin"></a>
+                <a href="#"><img class="animateIcon" src="../assets/instagramlogo.png" alt="Logo instagram"></a>
             </div>
             <div class="copy">
                 <p>LeonardoPita.com</p>
