--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Leonardo Pita WebDev/HOME</title>
+        <title>LeoPita HOME</title>
         <meta name="description" content="Leonardo Pita Web, web de desarrollador web, home page.">
         <meta name="keywords"  content="HTML, JS, CSS, , sass, git, github, HOME">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -80,9 +80,9 @@
             </div>
             <div class="flex content">
                 <h2 class="animateIcon"><a class="navbar-brand fontColor1 title current animateIcon" href="index.html">LP</a></h2>
-                <a href="#"><img class="animateIcon" src="assets/githublogo.png"></a>
-                <a href="#"><img class="animateIcon" src="assets/linkedinlogo.png"></a>
-                <a href="#"><img class="animateIcon" src="assets/instagramlogo.png"></a>
+                <a href="#"><img class="animateIcon" src="assets/githublogo.png" alt="Logo github"></a>
+                <a href="#"><img class="animateIcon" src="assets/linkedinlogo.png" alt="Logo linkedin"></a>
+                <a href="#"><img class="animateIcon" src="assets/instagramlogo.png" alt="Logo instagram"></a>
             </div>
             <div class="copy">
                 <p>LeonardoPita.com</p>
